[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "game_lib"
path = "src/game_lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
bevy = "0.9.0"
leafwing-input-manager = "0.7.0"
probability = "0.20.1"
rand = "0.8.5"
